# todoist

./: .env_example  .gitignore  README.md  config.py  pyproject.toml  pytest.ini
api/: projects.py  tasks.py
data/: project_constants.py
data/models/: request_models.py  response_models.py
tests/: conftest.py
tests/projects/: test_create_project.py  test_create_projects.py  test_delete_project.py  test_get_project.py  test_get_projects.py  test_update_project.py
tests/tasks/: conftest.py  test_close_task.py  test_create_task.py  test_delete_task.py  test_get_task.py  test_get_tasks.py  test_reopen_task.py  test_update_task.py
utils/: api.py  env_path_getter.py  logger.py  request_utils.py  session.py
