[tool.poetry]
name = "todoist"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
requests = "^2.32.3"
allure-pytest = "^2.13.5"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
